skip to content contrast fix

--- a/src/scss/themes/_base.scss
+++ b/src/scss/themes/_base.scss
@@ -3,7 +3,7 @@
 
 // Base colors and variables that are used across sections
 $base-light-theme: (
-  primary: red,
+  primary: #800000,
   background: #ffffff,
   text: #000000,
   text-muted: #2b2b2b,
